# sanitize-text

./: .dockerignore  .gitignore  .markdownlint.json  AGENTS.md  Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  VERSIONS.md  docker-compose.dev.yaml  docker-compose.yaml  project-overview.md  pyproject.toml  pyscrub-cli.py  requirements.all.txt  requirements.txt  run.py  sanatize_text-v2.py  sanatize_text.py  sanitize-cli.py  setup.py
.github/workflows/: build-docker-on-main.yaml  pr-ci.yaml
custom_detectors/: dutch_filth.py  dutch_json_entity_detector.py  dutch_location_detector.py  dutch_name_detector.py  dutch_organization_detector.py  markdown_url_detector.py  private_ip_detector.py  public_ip_detector.py  url_detector.py
nl_entities/: cities.json  cities.txt  names.json  names.txt  organizations.json  organizations.txt
sanitize_text/: __init__.py  __main__.py  output.py
sanitize_text/add_entity/: __init__.py  __main__.py  main.py
sanitize_text/cli/: __init__.py  io.py  main.py
sanitize_text/core/: scrubber.py
sanitize_text/data/en_entities/: locations.json  locations_spaCy.json  names.json  names_spaCy.json  organizations.json  organizations_spaCy.json
sanitize_text/data/nl_entities/: cities.json  cities_spaCy.json  names.json  names_spaCy.json  organizations.json  organizations_spaCy.json
sanitize_text/utils/: __init__.py  add_entity.py  cleanup.py  detectors.py  filth.py  io_helpers.py  nlp_resources.py  normalize.py  pdf.py  post_processors.py  preconvert.py
sanitize_text/utils/custom_detectors/: __init__.py  base.py  custom_word.py  dutch_detectors.py  english_detectors.py  ip_detectors.py  markdown_url_detector.py  sharepoint_url_detector.py  url_detector.py
sanitize_text/webui/: __init__.py  __main__.py  helpers.py  main.py  routes.py  run.py
sanitize_text/webui/static/: script.js  style.css  style.css.bak
sanitize_text/webui/templates/: index.html  index.html.bak
sanitize_text_webui/: __init__.py  routes.py
sanitize_webui/templates/: index.html
scripts/: convert_to_spacy.py  extract_dutch_firstnames.py  local-ci.sh  pdf2md.py  train_spacy_ner.py
tests/: conftest.py  test_add_entity.py  test_add_entity_more.py  test_application_detector.py  test_cleanup.py  test_cli_io.py  test_cli_main.py  test_cli_verbose.py  test_core_scrubber.py  test_custom_detectors_base.py  test_custom_detectors_detectors.py  test_custom_detectors_urls_more.py  test_filth.py  test_nlp_resources.py  test_normalize.py  test_normalize_pdf.py  test_output_more.py  test_output_pdf_docx.py  test_output_writers.py  test_package_main.py  test_post_processors.py  test_preconvert.py  test_utils_pdf_module.py  test_webui_init.py  test_webui_main.py  test_webui_routes_endpoints.py  test_webui_routes_helpers.py  test_webui_routes_ui_layout.py  test_webui_run.py
