[project]
name = "sanitize-text"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "Flask",
  "python-dotenv",
  "click",
  "halo",
  "scrubadub",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
  "ruff>=0.6.9",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
# Align with repo guidance; adjust if project standard differs
line-length = 100
# Target Python 3.10 features; update if project pins another version
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
# Enable rule families from AGENTS.md
select = [
  "F",   # Pyflakes (correctness)
  "E", "W",  # pycodestyle (PEP8 surface)
  "N",  # pep8-naming (naming)
  "I",  # isort (import order)
  "D",  # pydocstyle (docstrings)
  "DOC",# pydoclint (docstrings content)
  "TID",# tidy imports (import hygiene)
  "UP", # pyupgrade (modern python)
  "FA", # future-annotations guidance
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--maxfail=1 -q"

[tool.pdm.scripts]
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."
test = "pytest -q"
cov = "pytest --cov=. --cov-report=term-missing:skip-covered --cov-report=xml"
